# ROS2WithSPCK

./: .gitignore  GenRefTrajectory.cpp  PIDController.cpp  PIDController.h  PiecewiseTrajectory.h  README.md  ReadRTLog_and_PIDReplay.ipynb  Result_SPCKRT.ipynb  Test_SpckRT.cpp  Vehicle4WDB_RealtimeCRV.spck  Y_output.xlsx  subvars_OptBase.subvar
DemoCode/: PiecewiseTrajectory.cpp  Test_SpckRT.cpp
GIS_Track/: Analysis_LinePoints2SPCK.ipynb  Analysis_MetroGIS.ipynb  Analysis_VirtualLine.ipynb  Vehicle4WDB_VirtualTrack.spck  Vehicle4WDB_WS_VirtualTrack.spck
PostAnalysis/: Analysis_PIDOpenLoopReplay.ipynb  Result_RT.spf  Result_SPCKRT.ipynb  tools_SlidingWindow_Sperling.mlx  tools_Sperling.mlx
SPCK_Model/: LM.prw  Vehicle4WDB_RealtimeCRV.spck
SPCK_Model/ref_files/: Bogie_IRWs_4WDBv3.spck  IRW_4WDBv31.spck  subvars_FWDBv31-备份.subvar
SPCK_Model/ref_files/IRW_4WDBv31.output/: IRW_4WDBv31.spckst
SPCK_Track/: Analysis_ReproductSPCKTrk.ipynb  Analysis_SpeedCtrl.ipynb  Analysis_VehicleInSPCKTrk.ipynb  Analysis_WheelsetInSPCKTrk.ipynb  CRVLines.ipynb  OnlineVis_RTTrain.py  TrkAbs_RTViz.py  TrkRel_RTViz.py  WSinSelfTrack.ipynb  tools_RailTransform.py  tools_SPCKTrk.py
SPCK_UE5/: MoveComponent.cpp  MoveComponent.h  MoveComponent_Bogie.cpp  MoveComponent_Bogie.h  MoveComponent_Carbody.cpp  MoveComponent_Carbody.h  MoveComponent_Wheelset.cpp  MoveComponent_Wheelset.h  Plane_z8m.ipynb  TrainData.h  TrajectorySpline.cpp  TrajectorySpline.h  UDPReceiver.cpp  UDPReceiver.h  Vehicle4WDB.Build.cs  log_udp_player.py  moveCube.ipynb  old_MoveComponent.cpp  old_MoveComponent.h  old_UDPReceiver.cpp  old_UDPReceiver.h  test_UDP77Receiver.ipynb  轨道插件建模所需数据.xlsx  轨道插件建模所需数据_2500cm降采样.xlsx
SPCK_UE5/Vehicle4WDB/: Vehicle4WDB.Build.cs  Vehicle4WDB.cpp  Vehicle4WDBCharacter.cpp  Vehicle4WDBCharacter.h  Vehicle4WDBGameMode.cpp  Vehicle4WDBGameMode.h
SPCK_UE5/Vehicle4WDB/Private/: MoveComponent_Carbody.cpp  MoveComponent_Wheelset.cpp  TrainDataWidget.cpp  TrainHUDActor.cpp  UDPReceiver.cpp
SPCK_UE5/Vehicle4WDB/Public/: MoveComponent_Carbody.h  TrainData.h  TrainDataWidget.h  TrainHUDActor.h  TrajectorySpline.h  UDPReceiver.h
docs/: Railway System with Intercity Train 中文说明书.docx  SimpackTracks.docx  Train Template V2 中文说明书.docx  Y_output.xlsx  Y_output与SimpackW.xlsx  线路规划.xlsx  跨线运行SPCK曲线定义组.xlsx
src/simpack_control/: CMakeLists.txt  package.xml
src/simpack_control/include/simpack_control/: ControllerNode.hpp  OnlineEvaluationNode.hpp  SimpackNode.hpp
src/simpack_control/launch/: start_simpack_control.launch.py
src/simpack_control/msg/: SimpackY.msg
src/simpack_control/src/: ControllerNode.cpp  OnlineEvaluationNode.cpp  PIDController.cpp  PiecewiseTrajectory.cpp  SimpackNode.cpp  TrkAbs_UDPSenderNode.cpp  TrkRel_UDPSenderNode.cpp  UDPSenderNode.cpp  main_controller.cpp  main_onlinevaluation.cpp  main_simpack.cpp
src/simpack_interfaces/: CMakeLists.txt  package.xml
src/simpack_interfaces/msg/: SimpackU.msg  SimpackW.msg  SimpackY.msg
