<?xml version="1.0"?>
<package format="3">
  <name>simpack_interfaces</name>
  <version>0.1.0</version>
  <description>Message interfaces for SIMPACK Realtime via ROS2</description>
  <maintainer email="wenquantongxin@126.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 消息生成器依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- 声明这是一个消息接口包 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

